Bug 292129 - Cannot remove contact with a huge avatar
Summary: Cannot remove contact with a huge avatar
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-21 18:48 UTC by Daniele E. Domenichelli
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-01-21 18:48:08 UTC
When you remove a contact, the avatar of the contact is displayed full sized
If the avatar is too big, the remove button is outside the screen and it is impossible to click it

I suggest to resize the avatar if it is bigger than a fixed size
Comment 1 Martin Klapetek 2012-02-23 12:36:54 UTC
Git commit 038fccee3771db13c8d1b09c287b887c1261d861 by Martin Klapetek.
Committed on 23/02/2012 at 13:35.
Pushed by mklapetek into branch 'master'.

Prevent avatars going impossibly too big in remove dialog

Reviewed-by: David Edmundson

M  +1    -1    dialogs/remove-contact-dialog.cpp

http://commits.kde.org/telepathy-contact-list/038fccee3771db13c8d1b09c287b887c1261d861
Comment 2 Martin Klapetek 2012-02-23 12:38:02 UTC
Git commit 0c9e7d4001b6c69232115e92c1265f1efed8624f by Martin Klapetek.
Committed on 23/02/2012 at 13:35.
Pushed by mklapetek into branch 'kde-telepathy-0.3'.

Prevent avatars going impossibly too big in remove dialog

Reviewed-by: David Edmundson

M  +1    -1    dialogs/remove-contact-dialog.cpp

http://commits.kde.org/telepathy-contact-list/0c9e7d4001b6c69232115e92c1265f1efed8624f
Comment 3 David Edmundson 2012-02-24 16:38:03 UTC
Git commit d13fed7fc189bcc0275795a3a231dd5662d6625b by David Edmundson, on behalf of Martin Klapetek.
Committed on 23/02/2012 at 13:35.
Pushed by davidedmundson into branch 'kde-telepathy-0.3'.

Prevent avatars going impossibly too big in remove dialog

Reviewed-by: David Edmundson

M  +1    -1    dialogs/remove-contact-dialog.cpp

http://commits.kde.org/telepathy-contact-list/d13fed7fc189bcc0275795a3a231dd5662d6625b