Prevent avatars going impossibly too big in remove dialog

Reviewed-by: David Edmundson
BUG: 292129